tests/snapshots/snapshots/snapshots__snapshots__json_output__close_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: normalize_json(&json)
---
[
  {
    "close_reason": "Done",
    "closed_at": "TIMESTAMP",
    "id": "ISSUE_ID",
    "status": "closed",
    "title": "Issue to close"
  }
]
