tests/snapshots/snapshots/snapshots__snapshots__json_output__list_empty_json_output.snap
---
source: tests/snapshots/json_output.rs
assertion_line: 518
expression: normalize_json(&json)
---
{
  "issues": [],
  "total": 0,
  "limit": 0,
  "offset": 0,
  "has_more": false
}
